--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -23,7 +23,8 @@
     "import pytz\n",
     "# OS interaction\n",
     "import sys\n",
-    "import os"
+    "import os\n",
+    "import glob"
    ]
   },
   {
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -52,14 +53,16 @@
    "source": [
     "# Directories\n",
     "# Path to raw data\n",
-    "main_dir   = os.path.normpath(r'F:\\Work\\e\\Data\\Obs\\Canada_Project_Sites\\Nov_2014_snow_storm_data')\n",
+    "out_dir    = os.path.normpath(r'F:\\Work\\e\\Data\\Obs\\Canada_Project_Sites\\Nov_2014_snow_storm_data')\n",
+    "main_dir   = os.path.normpath(r'C:\\Users\\new356\\Google Drive\\Nov2014 Data QC Completed Data')\n",
     "# MetaDataFile\n",
     "meta_data_file  = os.path.join(main_dir,'CRHO_Station_lat_long_elevation.txt')\n",
     "# Ascii input folder\n",
-    "dir_in     = main_dir + '\\QC_ascii'\n",
+    "#dir_in     = main_dir + '\\QC_ascii'\n",
+    "dir_in     = main_dir + '\\QC_Data_ASCII_slim'\n",
     "# netcdf output folder\n",
     "dir_out    = main_dir + '\\\\QC_netcdf'\n",
-    "cfileout   = os.path.join(dir_out,'CRHO.nc')"
+    "cfileout   = os.path.join(out_dir,'CRHO.nc')"
    ]
   },
   {
@@ -101,9 +104,13 @@
    "outputs": [],
    "source": [
     "# Get file in info\n",
+    "#os.chdir(dir_in) # Move to input\n",
+    "#content = os.listdir(os.getcwd()) # Get list of files\n",
+    "#num_files = len([name for name in os.listdir('.') if os.path.isfile(name)]) # Get number of files in\n",
+    "\n",
     "os.chdir(dir_in) # Move to input\n",
-    "content = os.listdir(os.getcwd()) # Get list of files\n",
-    "num_files = len([name for name in os.listdir('.') if os.path.isfile(name)]) # Get number of files in"
+    "content = glob.glob('*.txt') # Get list of files\n",
+    "num_files = len(content)"
    ]
   },
   {
@@ -129,17 +136,17 @@
      "data": {
       "text/plain": [
        "['BNS_15min_2013_2016_slim.txt',\n",
-       " 'BRP_15min_2013_2016_slim.txt',\n",
-       " 'BWH_15min_2013_2016_slim.txt',\n",
-       " 'CRG_15min_2013_2016_slim.txt',\n",
+       " 'BRP_15min_2014_slim.txt',\n",
+       " 'BWH_15min_2014_slim.txt',\n",
+       " 'CRG_15min_2014_slim.txt',\n",
        " 'CRN_15min_2013_2016_slim.txt',\n",
        " 'FLG_15min_2014-2016_slim.txt',\n",
-       " 'FRG_15min_2013_2016_slim.txt',\n",
+       " 'FRG_15min_2014_slim.txt',\n",
        " 'FRS_15min_2013_2016_slim.txt',\n",
        " 'HLN_15min_2014_2015_slim.txt',\n",
        " 'PWL_15min_2013_2016_slim.txt',\n",
        " 'PYT_15min_2013_2016_slim.txt',\n",
-       " 'SIB_15min_2013_2016_slim.txt']"
+       " 'SIB_15min_2014_slim.txt']"
       ]
      },
      "execution_count": 8,
@@ -351,35 +358,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soil Moisture D\n",
-      "Soil Moisture B\n",
-      "Soil Moisture C\n",
-      "Scalar Wind Speed B\n",
-      "Snow Layer Temperature A\n",
-      "Total Pressure Unadjusted A\n",
-      "Incremental Precipitation A\n",
-      "Downward Solar Radiation\n",
-      "Soil Moisture A\n",
-      "Downward Terrestrial Rad\n",
-      "Soil Temperature B\n",
-      "Scalar Wind Speed A\n",
-      "Soil Temperature A\n",
-      "Soil Temperature C\n",
-      "Air temperature A\n",
-      "Total Pressure Adjusted to Sea-level\n",
-      "Snow Water Equivelent A\n",
       "Air Moisture Content A\n",
-      "Air Temperature C\n",
-      "Soil Temperature D\n",
+      "Downward Solar Radiation\n",
+      "Snow Depth QC value\n",
+      "Soil Moisture B\n",
       "Soil Moisture E\n",
       "Snow Depth A\n",
-      "Upward Solar Radiation\n",
-      "Upward Terrestrial Rad\n",
-      "Wind Direction at A\n",
-      "Soil Heat Flux  A\n",
-      "Snow Depth QC value\n",
+      "Incremental Precipitation A\n",
+      "Air Temperature C\n",
+      "Soil Temperature B\n",
+      "Downward Terrestrial Rad\n",
       "Soil Temperature E\n",
-      "Incremental Precipitation B\n"
+      "Incremental Precipitation B\n",
+      "Scalar Wind Speed B\n",
+      "Wind Direction at A\n",
+      "Soil Temperature A\n",
+      "Total Pressure Adjusted to Sea-level\n",
+      "Scalar Wind Speed A\n",
+      "Soil Temperature D\n",
+      "Snow Water Equivelent A\n",
+      "Soil Moisture C\n",
+      "Air temperature A\n",
+      "Upward Terrestrial Rad\n",
+      "Upward Solar Radiation\n",
+      "Total Pressure Unadjusted A\n",
+      "Soil Moisture D\n",
+      "Snow Layer Temperature A\n",
+      "Soil Moisture A\n",
+      "Soil Temperature C\n",
+      "Soil Heat Flux  A\n"
      ]
     }
    ],
@@ -429,35 +436,35 @@
        "  * station                               (station) object 'BNS' 'BRP' 'BWH' ...\n",
        "  * time                                  (time) object 1349028000000000000 ...\n",
        "Data variables:\n",
-       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
-       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
-       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
-       "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
-       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
-       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
-       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
-       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
-       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
-       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
-       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
-       "    Air temperature A                     (station, time) float64 nan nan ...\n",
-       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
-       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
        "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
-       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
-       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
+       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
        "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
        "    Snow Depth A                          (station, time) float64 nan nan ...\n",
-       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
-       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
-       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
-       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
-       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
+       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
+       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
+       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
        "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation B           (station, time) float64 nan nan ..."
+       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
+       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
+       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
+       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
+       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
+       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
+       "    Air temperature A                     (station, time) float64 nan nan ...\n",
+       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
+       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
+       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
+       "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
+       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
+       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 nan nan ..."
       ]
      },
      "execution_count": 17,
@@ -502,16 +509,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ensure it is written in correct local time zone (TODO)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -629,7 +638,7 @@
        "HLN        99     99           9999"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -654,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -672,38 +681,38 @@
        "    Lat                               (station) int64 99 99 99 99 99 99 99 ...\n",
        "    Lon                               (station) int64 99 99 99 99 99 99 99 ...\n",
        "Data variables:\n",
-       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
-       "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
-       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
-       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
-       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
-       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
-       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
        "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
-       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
        "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
        "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
-       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
-       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
-       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
+       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
+       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
        "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ..."
+       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
+       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
+       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
+       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
+       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
+       "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
+       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
