--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -360,33 +360,33 @@
      "text": [
       "Air Moisture Content A\n",
       "Downward Solar Radiation\n",
-      "Snow Depth QC value\n",
-      "Soil Moisture B\n",
-      "Soil Moisture E\n",
-      "Snow Depth A\n",
-      "Incremental Precipitation A\n",
-      "Air Temperature C\n",
-      "Soil Temperature B\n",
-      "Downward Terrestrial Rad\n",
-      "Soil Temperature E\n",
-      "Incremental Precipitation B\n",
-      "Scalar Wind Speed B\n",
-      "Wind Direction at A\n",
-      "Soil Temperature A\n",
-      "Total Pressure Adjusted to Sea-level\n",
-      "Scalar Wind Speed A\n",
-      "Soil Temperature D\n",
-      "Snow Water Equivelent A\n",
-      "Soil Moisture C\n",
       "Air temperature A\n",
-      "Upward Terrestrial Rad\n",
-      "Upward Solar Radiation\n",
-      "Total Pressure Unadjusted A\n",
-      "Soil Moisture D\n",
-      "Snow Layer Temperature A\n",
+      "Soil Temperature B\n",
+      "Incremental Precipitation B\n",
       "Soil Moisture A\n",
+      "Soil Moisture B\n",
+      "Incremental Precipitation A\n",
+      "Snow Depth A\n",
+      "Scalar Wind Speed A\n",
+      "Soil Moisture C\n",
+      "Downward Terrestrial Rad\n",
+      "Scalar Wind Speed B\n",
+      "Upward Terrestrial Rad\n",
       "Soil Temperature C\n",
-      "Soil Heat Flux  A\n"
+      "Total Pressure Unadjusted A\n",
+      "Snow Water Equivelent A\n",
+      "Soil Temperature A\n",
+      "Upward Solar Radiation\n",
+      "Soil Temperature E\n",
+      "Snow Depth QC value\n",
+      "Soil Moisture D\n",
+      "Wind Direction at A\n",
+      "Total Pressure Adjusted to Sea-level\n",
+      "Snow Layer Temperature A\n",
+      "Soil Heat Flux  A\n",
+      "Soil Temperature D\n",
+      "Air Temperature C\n",
+      "Soil Moisture E\n"
      ]
     }
    ],
@@ -438,33 +438,33 @@
        "Data variables:\n",
        "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
        "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
-       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
-       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
-       "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
-       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
-       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
-       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
-       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
-       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
-       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
-       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
-       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
-       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
-       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
-       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
        "    Air temperature A                     (station, time) float64 nan nan ...\n",
-       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
-       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
-       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
-       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
-       "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
+       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
        "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
+       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
+       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
        "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
-       "    Soil Heat Flux  A                     (station, time) float64 nan nan ..."
+       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
+       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
+       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
+       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
+       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
+       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
+       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
+       "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
+       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
+       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
+       "    Soil Moisture E                       (station, time) float64 nan nan ..."
       ]
      },
      "execution_count": 17,
@@ -683,33 +683,33 @@
        "Data variables:\n",
        "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
        "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
-       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
-       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
-       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
-       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
-       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
        "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
-       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
-       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
-       "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
+       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
        "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
        "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
-       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ..."
+       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
+       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
+       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
+       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
+       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
+       "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
+       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureE                     (station, time) float64 nan nan nan ..."
       ]
      },
      "execution_count": 23,
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
